--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -279,6 +279,7 @@
   padding: 35px
   position: relative
   background-color: #fff
+  overflow-y: auto
   .close
     width: 22px
     height: 22px
@@ -331,9 +332,19 @@
     font-size: 18px
     li
       margin-bottom: 20px
-      input, label
-        vertical-align: middle
-        display: inline-block
+      @include breakpoint($tablet)
+        input, label
+          vertical-align: middle
+          display: inline-block
+      @include breakpoint($phone-only)
+        display: flex
+        flex-flow: row wrap
+        input
+          flex: 0 1 15px
+        label
+          line-height: 24px
+          flex: 0 1 calc(100% - 25px)
+
   .shipping-group
     margin-bottom: 22px
     .shipping-list
@@ -351,12 +362,18 @@
       padding-bottom: 15px
       color: $copper
       font-size: 14px
-      flex: 0 1 20%
+      flex: 0 1 50%
+      @include breakpoint($tablet)
+        flex: 0 1 33%
+      @include breakpoint($desktop)
+        flex: 0 1 20%
   .shipping-confirmation-confirm
     @extend %button
     text-decoration: none
     display: inline-block
     letter-spacing: 0
+  a
+    color: $copper
 
 .mc_embed_signup
   .input-group
