--- a/craft/templates/commerce/customer/order.html
+++ b/craft/templates/commerce/customer/order.html
@@ -77,7 +77,7 @@
           {% for adjustment in order.adjustments %}
           <tr>
             <td>{{ adjustment.type | t }}</td>
-            <td colspan="2"><strong>{{ adjustment.name }}</strong><br>({{ adjustment.description }})</td>
+            <td colspan="2"><strong>{{ adjustment.name }}</strong></td>
             <td class="text-right">{{ adjustment.amount|currency(order.currency) }}</td>
           </tr>
           {% endfor %}
@@ -85,8 +85,14 @@
           <tr>
             <td colspan="4" class="text-right">
               {{ "Item" | t }} {{ "Total" | t }}: {{ order.itemTotal|currency(order.currency) }}<br>
-              {{ "Base" | t }} {{ "Discount" | t }}: {{ order.baseDiscount|currency(order.currency) }}<br>
-              {{ "Total" | t }} {{ "Shipping" | t }}: {{ order.totalShippingCost|currency(order.currency) }}<br>
+              {% if order.baseDiscount and order.baseDiscount != 0 %}
+                {{ "Base" | t }} {{ "Discount" | t }}: {{ order.baseDiscount|currency(order.currency) }}
+                <br>
+              {% endif %}
+              {% if order.totalShippingCost and order.totalShippingCost != 0 %}
+                {{ "Total" | t }} {{ "Shipping" | t }}: {{ order.totalShippingCost|currency(order.currency) }}
+                <br>
+              {% endif %}
               <h4>{{ "Total" | t }}: {{ order.totalPrice|currency(order.currency) }}</h4>
             </td>
           </tr>
