--- a/craft/templates/partials/confirmation_modal.html
+++ b/craft/templates/partials/confirmation_modal.html
@@ -1,4 +1,4 @@
-<div class="shipping-confirmation">
+<div class="shipping-confirmation modal">
   <div class="close"></div>
 
   <h2>{{ shippingConfirmation.shippingTitle }}</h2>
