--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -272,7 +272,7 @@
       li.next
         right: 10%
 
-.shipping-confirmation, .mc_embed_signup
+.modal
   max-width: 768px
   max-height: 525px
   display: none
