--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
   .featherlight .featherlight-inner {
     display: block;
@@ -301,6 +302,13 @@ img + .page-galleries {
   height: 169px;
 }
 
+.gallery {
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
 .gallery iframe {
   max-width: 100%;
   max-height: 100%;
