--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -164,6 +164,11 @@
         height: 169px
 
 .gallery
+  max-width: 100%
+  max-height: 100%
+  position: absolute
+  left: 0
+  top: 0
   iframe
     max-width: 100%
     max-height: 100%
