--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -2860,6 +2860,7 @@ table {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
   .featherlight .featherlight-inner {
     display: block;
