--- a/public/css/store.css
+++ b/public/css/store.css
@@ -39,6 +39,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
   .featherlight .featherlight-inner {
     display: block;
