--- a/public/css/store.css
+++ b/public/css/store.css
@@ -10,7 +10,6 @@
     z-index: 2;
     text-align: center;
     white-space: nowrap;
-    cursor: pointer;
     background: #333;
     background: transparent;
   }
@@ -27,6 +26,8 @@
   .featherlight .featherlight-content {
     text-align: left;
     vertical-align: middle;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     overflow: hidden;
     min-width: 30%;
@@ -34,11 +35,17 @@
     margin-right: 5%;
     height: 85%;
     width: 85%;
-    cursor: auto;
     white-space: normal;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .featherlight .featherlight-inner {
     display: block;
@@ -591,8 +598,6 @@ hr {
 /* Helpers
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .rounded {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
   border-radius: 4px;
 }
 
@@ -617,6 +622,8 @@ hr {
   margin-bottom: 40px;
 }
 .steps ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   display: -webkit-flex;
   margin-bottom: 0;
@@ -624,7 +631,9 @@ hr {
 .steps ul li {
   list-style: none;
   display: block;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   color: #aaa;
 }
 .steps ul li a {
@@ -648,8 +657,6 @@ hr {
   height: 10px;
   position: relative;
   border: 1px solid #bbb;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
   border-radius: 10px;
   padding: 3px;
   margin-bottom: 10px;
