--- a/public/css/sass/store.sass
+++ b/public/css/sass/store.sass
@@ -681,3 +681,28 @@ img.product
     li
       border-top: 1px solid #E1E1E1
       padding: 10px 0
+
+.order-confirmation
+  border: 1px solid $copper
+  background: rgba($copper, 0.1)
+  padding: 20px
+  margin-bottom: 20px
+  h2
+    margin-bottom: 5px
+  p
+    margin-bottom: 0
+
+/* Order Page
+ *–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#order-page
+  .four ul
+    margin: 0
+    padding: 0
+    li
+      margin: 0
+      margin-bottom: 10px
+      padding: 0
+      list-style-type: none
+      strong
+        display: block
