--- a/public/css/store.css
+++ b/public/css/store.css
@@ -846,3 +846,32 @@ img.product {
   border-top: 1px solid #E1E1E1;
   padding: 10px 0;
 }
+
+.order-confirmation {
+  border: 1px solid #B24629;
+  background: rgba(178, 70, 41, 0.1);
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.order-confirmation h2 {
+  margin-bottom: 5px;
+}
+.order-confirmation p {
+  margin-bottom: 0;
+}
+
+/* Order Page
+ *–––––––––––––––––––––––––––––––––––––––––––––––––– */
+#order-page .four ul {
+  margin: 0;
+  padding: 0;
+}
+#order-page .four ul li {
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 0;
+  list-style-type: none;
+}
+#order-page .four ul li strong {
+  display: block;
+}
