Ensure that we can center items for IE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -308,6 +308,8 @@ img + .page-galleries {
   position: absolute;
   left: 0;
   top: 0;
+  right: 0;
+  bottom: 0;
 }
 .gallery iframe {
   max-width: 100%;
