--- a/public/css/main.css
+++ b/public/css/main.css
@@ -446,7 +446,7 @@ img + .page-galleries {
 
 .shipping-confirmation, .mc_embed_signup {
   max-width: 768px;
-  max-height: 525px;
+  max-height: 530px;
   display: none;
   padding: 35px;
   position: relative;
@@ -467,6 +467,12 @@ img + .page-galleries {
   font-size: 36px;
   margin-bottom: 22px;
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
+}
+@media only screen and (max-width: 767px) {
+  .shipping-confirmation h2, .mc_embed_signup h2 {
+    font-size: 30px;
+    margin-bottom: 18px;
+  }
 }
 .shipping-confirmation h3, .mc_embed_signup h3 {
   box-sizing: border-box;
@@ -507,19 +513,33 @@ img + .page-galleries {
   top: 10px;
   background-position: 0 bottom;
 }
+@media only screen and (max-width: 767px) {
+  .shipping-confirmation h3, .mc_embed_signup h3 {
+    font-size: 20px;
+  }
+}
 .shipping-confirmation p, .mc_embed_signup p {
   margin-bottom: 22px;
   font-size: 18px;
   line-height: 28px;
+}
+@media only screen and (max-width: 767px) {
+  .shipping-confirmation p, .mc_embed_signup p {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 .shipping-confirmation .agreement, .mc_embed_signup .agreement {
   margin-bottom: 22px;
   font-size: 18px;
 }
 .shipping-confirmation .agreement li, .mc_embed_signup .agreement li {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 @media only screen and (min-width: 768px) {
+  .shipping-confirmation .agreement li, .mc_embed_signup .agreement li {
+    margin-bottom: 20px;
+  }
   .shipping-confirmation .agreement li input, .shipping-confirmation .agreement li label, .mc_embed_signup .agreement li input, .mc_embed_signup .agreement li label {
     vertical-align: middle;
     display: inline-block;
@@ -538,6 +558,12 @@ img + .page-galleries {
     flex: 0 1 calc(100% - 25px);
   }
 }
+@media only screen and (max-width: 767px) and (max-width: 767px) {
+  .shipping-confirmation .agreement li label, .mc_embed_signup .agreement li label {
+    font-size: 14px;
+  }
+}
+
 .shipping-confirmation .shipping-group, .mc_embed_signup .shipping-group {
   margin-bottom: 22px;
 }
@@ -602,6 +628,11 @@ img + .page-galleries {
   font-size: 24px;
   height: inherit;
   float: right;
+}
+
+.disable-scroll {
+  height: 100%;
+  overflow: hidden;
 }
 
 #content {
