--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -410,8 +410,16 @@
     float: right
 
 .disable-scroll
-  height: 100%
   overflow: hidden
+  @include breakpoint($phone-only)
+    position: fixed
+    .featherlight-content, .featherlight-inner
+      max-width: 100%
+      max-height: 100%
+      width: 100%
+      height: 100%
+      box-sizing: border-box
+      margin: 0
 
 // Content Work
 
