--- a/public/css/main.css
+++ b/public/css/main.css
@@ -310,6 +310,9 @@ img + .page-galleries {
   top: 0;
   right: 0;
   bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .gallery iframe {
   max-width: 100%;
@@ -319,7 +322,6 @@ img + .page-galleries {
   max-width: 100%;
   max-height: 100%;
   display: none;
-  margin: 0 auto;
 }
 .gallery img.active {
   display: block;
