--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -160,9 +160,10 @@ nav
     top: 1px
     display: inline-block
   a
-    text-transform: uppercase
     color: white
     text-decoration: none
+  & > a
+    text-transform: uppercase
     span
       margin-right: 5px
 
