--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -294,6 +294,7 @@ footer
       $padding: 20px
       margin-bottom: 15px
       vertical-align: middle
+      list-style-type: none
       &.contact-phone, &.contact-email
         display: inline-block
       &.contact-phone
