--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -8,45 +8,44 @@
     <div class="twelve columns">
 
       {% if cart.lineItems|length %}
-      <table class="u-full-width">
-        <thead>
-          <tr>
-            <th>{{ "Product" | t }}</th>
-            <th>{{ "Qty" | t }}</th>
-            <th class="text-right">{{ "Price" | t }}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for item in cart.lineItems %}
-            {% include "commerce/_includes/cart_item" %}
-          {% endfor %}
+      <div class="cart-wrapper">
+        <table class="u-full-width">
+          <thead>
+            <tr>
+              <th>{{ "Product" | t }}</th>
+              <th>{{ "Qty" | t }}</th>
+              <th class="text-right">{{ "Price" | t }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for item in cart.lineItems %}
+              {% include "commerce/_includes/cart_item" %}
+            {% endfor %}
+            <tr>
+              <td>
+                {# Remove all line items to empty the cart: #}
+                <form method="POST">
+                  <input type="hidden" name="action" value="commerce/cart/removeAllLineItems"/>
+                  <input type="hidden" name="redirect" value="commerce/cart"/>
+                  {{ getCsrfInput() }}
+                  <input class="button link" type="submit" value="{{ "Empty the Cart" | t }}"/>
+                </form>
 
+              </td>
+              <td>
+              </td>
+              <td class="text-right">
+                {% if cart.totalDiscount != '0' %}
+                  {{ "Total" | t }} {{ "Discount" | t }}: {{ cart.totalDiscount|currency(currencyCode) }}<br>
+                {% endif %}
+                <!-- Use itemPrice because there's no point in adding shipping or taxes before they're selected -->
+                <h4>Total: {{ cart.itemSubtotal|currency(currencyCode) }}</h4>
+              </td>
+            </tr>
 
-
-          <tr>
-            <td>
-              {# Remove all line items to empty the cart: #}
-              <form method="POST">
-                <input type="hidden" name="action" value="commerce/cart/removeAllLineItems"/>
-                <input type="hidden" name="redirect" value="commerce/cart"/>
-                {{ getCsrfInput() }}
-                <input class="button link" type="submit" value="{{ "Empty the Cart" | t }}"/>
-              </form>
-
-            </td>
-            <td>
-            </td>
-            <td class="text-right">
-              {% if cart.totalDiscount != '0' %}
-                {{ "Total" | t }} {{ "Discount" | t }}: {{ cart.totalDiscount|currency(currencyCode) }}<br>
-              {% endif %}
-              <!-- Use itemPrice because there's no point in adding shipping or taxes before they're selected -->
-              <h4>Total: {{ cart.itemSubtotal|currency(currencyCode) }}</h4>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
 
       <a class="button button-primary" href="{{ url('commerce/checkout') }}">{{ "Checkout" | t }}</a>
       {% endif %}
