--- a/public/css/store.css
+++ b/public/css/store.css
@@ -83,6 +83,19 @@
   box-sizing: border-box;
 }
 
+.cart-wrapper {
+  max-width: 100%;
+  overflow-y: scroll;
+}
+.cart-wrapper form {
+  margin-bottom: 0;
+}
+@media (max-width: 370px) {
+  .cart-wrapper {
+    font-size: 14px;
+  }
+}
+
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
@@ -314,6 +327,12 @@ input[type="submit"], input[type="reset"], input[type="button"] {
   cursor: pointer;
   box-sizing: border-box;
 }
+@media only screen and (max-width: 767px) {
+  input[type="submit"], input[type="reset"], input[type="button"] {
+    font-size: 10px;
+    padding: 0 15px;
+  }
+}
 
 .button .fa, button .fa {
   font-size: 16px;
@@ -408,6 +427,11 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
+}
+@media only screen and (max-width: 767px) {
+  input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"] {
+    width: 100%;
+  }
 }
 
 textarea, select {
@@ -525,6 +549,7 @@ th, td {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #E1E1E1;
+  vertical-align: top;
 }
 
 th:first-child, td:first-child {
@@ -861,6 +886,11 @@ img.product {
 
 /* Order Page
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (max-width: 370px) {
+  #order-page th, #order-page td {
+    padding: 5px;
+  }
+}
 #order-page .four ul {
   margin: 0;
   padding: 0;
