--- a/public/css/store.css
+++ b/public/css/store.css
@@ -26,8 +26,6 @@
   .featherlight .featherlight-content {
     text-align: left;
     vertical-align: middle;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex;
     overflow: hidden;
     min-width: 30%;
@@ -36,16 +34,9 @@
     height: 85%;
     width: 85%;
     white-space: normal;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     position: relative;
   }
   .featherlight .featherlight-inner {
@@ -599,6 +590,8 @@ hr {
 /* Helpers
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
 .rounded {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
   border-radius: 4px;
 }
 
@@ -623,8 +616,6 @@ hr {
   margin-bottom: 40px;
 }
 .steps ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   display: -webkit-flex;
   margin-bottom: 0;
@@ -632,9 +623,7 @@ hr {
 .steps ul li {
   list-style: none;
   display: block;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   color: #aaa;
 }
 .steps ul li a {
@@ -658,6 +647,8 @@ hr {
   height: 10px;
   position: relative;
   border: 1px solid #bbb;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   border-radius: 10px;
   padding: 3px;
   margin-bottom: 10px;
